# mavros

build-mavros-Desktop-Default/: CMakeCache.txt
mavros/: CMakeLists.txt  mavros_plugins.xml
mavros/src/lib/: uas_frame_conversions.cpp
mavros/src/plugins/: B_matrix(test).cpp  B_matrix.cpp  Bb_tb_i_matrix.cpp  Bb_tb_i_pinv_matrix.cpp  Bt_tb_i_matrix.cpp  T_bw_matrix.cpp  csi.cpp  csi_dot.cpp  csi_dot_r.cpp  csi_r.cpp  g_matrix.cpp  polimi_attitude_ned.cpp
mavros_extras/src/plugins/: vision_pose_estimate.cpp
mavros_msgs/: CMakeLists.txt
mavros_msgs/msg/: B_matrix.msg  Bb_tb_i_matrix.msg  Bb_tb_i_pinv_matrix.msg  Bt_tb_i_matrix.msg  T_bw_matrix.msg  csi.msg  csi_dot.msg  csi_dot_r.msg  csi_r.msg  g_matrix.msg  polimi_attitude_ned.msg
